--- a/main.html
+++ b/main.html
@@ -23,7 +23,7 @@
 
         <tbody>
             <tr>
-                <th>Weist</th>
+                <td>Weist</td>
                 <td>25</td>
                 <td>28</td>
                 <td>30</td>
@@ -31,7 +31,7 @@
                 <td>32</td>
             </tr>
             <tr>
-                <th>Chest</th>
+                <td>Chest</td>
                 <td>34</td>
                 <td>34</td>
                 <td>38</td>
@@ -40,7 +40,7 @@
             </tr>
             
             <tr>
-                <th>Sleeve</th>
+                <td>Sleeve</td>
                 <td>23</td>
                 <td>24</td>
                 <td>24</td>
