--- a/main.html
+++ b/main.html
@@ -23,7 +23,7 @@
 
         <tbody>
             <tr>
-                <td>Weist</td>
+                <td>Waist</td>
                 <td>25</td>
                 <td>28</td>
                 <td>30</td>
